[package]
name = "d7020e_lab4_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "srp"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
indented = "0.1.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
