[package]
name = "srp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "srp"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive", "string"] }
indented = "0.1.0"
plotters = "0.3.5"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
